fix fullbleed image

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -147,22 +147,25 @@
 
 .full-bleed {
 	width: 100vw;
-	max-height: 1080px;
+	max-height: 800px;
 	margin: -1em 0 1em -1em;
 	border-top: 1px solid hsl(0, 0%, 90%);
 	border-bottom: 1px solid hsl(0, 0%, 90%);
 	overflow: hidden;
 
 	@media screen and (min-width: $query__small) {
-		margin: -2em 0 1em -2em;
+		margin: -2em 0 2em -2em;
 	}
 
 	@media screen and (min-width: $query__medium) {
-		margin: -2em -2em 2em;
+		margin-right: -4em;
 	}
 
 	@media screen and (min-width: $size__max-width) {
 		min-width: 100%;
+		margin-top: -3em;
+		margin-left: -4em;
+		margin-bottom: 4em;
 	}
 
 	img {
