--- a/style.css
+++ b/style.css
@@ -1579,7 +1579,7 @@ Header Menu
 /* Single Post Featured Images */
 .full-bleed {
 	width: 100vw;
-	max-height: 1080px;
+	max-height: 800px;
 	margin: -1em 0 1em -1em;
 	border-top: 1px solid #e6e6e6;
 	border-bottom: 1px solid #e6e6e6;
@@ -1588,19 +1588,22 @@ Header Menu
 
 @media screen and (min-width: 600px) {
 	.full-bleed {
-		margin: -2em 0 1em -2em;
+		margin: -2em 0 2em -2em;
 	}
 }
 
 @media screen and (min-width: 900px) {
 	.full-bleed {
-		margin: -2em -2em 2em;
+		margin-right: -4em;
 	}
 }
 
 @media screen and (min-width: 1440px) {
 	.full-bleed {
 		min-width: 100%;
+		margin-top: -3em;
+		margin-left: -4em;
+		margin-bottom: 4em;
 	}
 }
 
